more work done on botting.

--- a/README
+++ b/README
@@ -12,3 +12,6 @@ You can have achievements like backstabs, levels, and achievements posted to Twi
 Contributing
 If you make triggers or edit the aa.tin file in any way please load it with tintin++ and save it with #write it aa.tin before committing it so that everything will be in the standard tintin++ format. Please test your code before submitting.
 
+Botting:
+To start botting type bot. To turn it off type nobot. To move while botting type automove, to stop moving type noautomove. If you have the taunt skill you will use it each time you enter a new room. Botting will try and autouse the best heal spell you have. Botting will try to not get you killed and try to recall you out if things get too bad. You can, of course, still die while botting.
+
