Added beginning of group bot support. Removed automatic lock picking retry because the way the game does it is different now and it is no longer needed. Put total exp lost into death tweets.

--- a/README
+++ b/README
@@ -1,10 +1,13 @@
-License GPL
+Authors:
+Storm Dragon
+
+License LGPL
 
 Connecting:
 To connect edit aa.tin and find the name and password variables at the bottom of the file. Change the text in the second set of braces in each variable to match your character's details. Load the file with tt++ aa.tin.
 
 Skills and Spells:
-To get full binnifits, when you first load the file type skills. Press enter until you have seen your full list of skills. Repeat this for spells. When you gain a new spell or skill type either spells or skills again to update the variables. Type #write aa.tin to save your changes. Note necromancers can autocast clay man. To turn it on type autoclay and to turn it back off type noautoclay.
+Some skills and spells can automatically be used while you are playing. OTo make sure everything is set up type load. You may also want to type load when you first practice a new skill or spell. An example of autousage is clay man for necromancers. To turn on automatica recast when your clay man dies type autoclay and to turn it back off type noautoclay.
 
 Twitter:
 You can have achievements like backstabs, levels, and achievements posted to Twitter. If you have the CLI Twitter client TTYtter installed and configured correctly type twitter and events will be posted. To turn it off type notwitter.
@@ -12,7 +15,8 @@ You can have achievements like backstabs, levels, and achievements posted to Twi
 Contributing
 If you make triggers or edit the aa.tin file in any way please load it with tintin++ and save it with #write it aa.tin before committing it so that everything will be in the standard tintin++ format. Please test your code before submitting.
 
-Aliases
+Aliases:
+id object cast identify on the specified object
 To sac a corpse type x and press enter. You will use any skills you have like corpsecutter aand/or bloodsacrifice.
 If you have the kick skill k will be aliased to kick.
 b is currently set to backstab. before using it you should set your stab weapon with the swield alias.
@@ -23,4 +27,4 @@ Some of thee will work  even if you don't have the skill, this will change as wo
 
 Botting:
 To start botting type bot. To turn it off type nobot. To move while botting type automove, to stop moving type noautomove. If you have the taunt skill you will use it each time you enter a new room. Botting will try and autouse the best heal spell you have. Botting will try to not get you killed and try to recall you out if things get too bad. You can, of course, still die while botting.
-
+If you trust the people you are grouping with type grbot to turn on group botting. nogrbot will turn it off. In game help is available while grbot is on by telling the group gt :help.
