New sounds and more aliases and triggers.

--- a/README
+++ b/README
@@ -14,6 +14,14 @@ Twitter:
 You can have achievements like backstabs, levels, and achievements posted to Twitter. If you have the CLI Twitter client TTYtter installed and configured correctly type twitter and events will be posted. To turn it off type notwitter.
 
 Aliases:
+bless cast bless n yourself
+bless target cast bless on someone else
+fireball and fb cast fireball
+fireball and fb target cast fireball on a specific target
+hands cast all available hand spells on yourself burning hands, shocking grasp, sickening touch
+hands target cast all available hand spells on someone else burning hands, shocking grasp, sickening touch
+icebolt and ib cast icebolt
+icebolt and ib target cast icebolt on a specific target
 id object cast identify on the specified object
 To sac a corpse type x and press enter. You will use any skills you have like corpsecutter aand/or bloodsacrifice.
 If you have the kick skill k will be aliased to kick.
