--- a/README
+++ b/README
@@ -12,6 +12,10 @@ Connecting:
 To connect edit aa.tin and find the name and password variables at the bottom of the file. Change the text in the second set of braces in each variable to match your character's details. Load the file with tt++ aa.tin.
 #variable {password} {password}
 
+Requirements:
+ogg123 part of vorbis-tools
+shuf usually included in most distros
+
 Skills and Spells:
 Some skills and spells can automatically be used while you are playing. OTo make sure everything is set up type load. You may also want to type load when you first practice a new skill or spell. An example of autousage is clay man for necromancers. To turn on automatica recast when your clay man dies type autoclay and to turn it back off type noautoclay.
 
