--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Storm Dragon
 License LGPL
 
 NOTES:
+Finally switched over to ogg12 for sounds, so now the requirement of vorbis-tools is more necessary. If for some reason you can not use vorbis toos though just change the soundCommand variable in aa.tin.
 To counter the bug in gone-terminal with the Orca screen reader a spacem has been added to the beginning of each line.
 If you don't need this and want to get rid of it, delete the one substitute in the aa.tin file. Do a search for the line starting with #SUBSTITUTE
 Work has started on background music/sound effects. If you happen to notice a lot of blank lines and the screen is hard to read type:
