--- a/README
+++ b/README
@@ -56,6 +56,8 @@ fireball and fb cast fireball
 fireball and fb target cast fireball on a specific target
 cfb or cfireball channelcast fireball
 cfb or cfireball target channelcast fireball on a specific target
+ff cast firefield
+cff channelcast firefield
 hands cast all available hand spells on yourself burning hands, shocking grasp, sacred and sickening touch
 hands target cast all available hand spells on someone else burning hands, shocking grasp, sacred and sickening touch
 icebolt and ib cast icebolt
