--- a/README
+++ b/README
@@ -4,17 +4,17 @@ Storm Dragon
 License LGPL
 
 NOTES:
-If you turn off line invertion tintin++ seems to work better, fewer blank lines etc. To do so, in the game type invert and you should get the message that line invertion mode has been disabled.
+If you turn off line invertion, tintin++ seems to work better - fewer blank lines etc. To do so, in the game type invert and you should get the message that line invertion mode has been disabled.
 A first attempt at tweeting quest completion has been added. It is likely to be buggy, so please let me know. This is a particularly difficult bit of code to write because there is no uniform quest completion message. So, if you have completed a quest and you have twitter enabled, don't fret if the quest isn't posted right away. There are several actions that trigger it, getting/taking stuff, talking to mobs, killing mobs all cause a check to see if your last completed quest has changed, if so it wil tweet the quest.
-Finally switched over to ogg12 for sounds, so now the requirement of vorbis-tools is more necessary. If for some reason you can not use vorbis toos though just change the soundCommand variable in aa.tin.
-To counter the bug in gone-terminal with the Orca screen reader a spacem has been added to the beginning of each line.
+Finally switched over to ogg123for sounds, so now the requirement of vorbis-tools is more necessary. If for some reason you can not use vorbis tools though just change the soundCommand variable in aa.tin.
+To counter the bug in gnome-terminal with the Orca screen reader, a space has been added to the beginning of each line.
 If you don't need this and want to get rid of it, delete the one substitute in the aa.tin file. Do a search for the line starting with #SUBSTITUTE
 Work has started on background music/sound effects. If you happen to notice a lot of blank lines and the screen is hard to read type:
 set ctrigger off
 There are no sound effects for backgrounds yet. If you want to make some read help wxkt_terrain in the game. the terrain files should be terrain-number.ogg where number is the number corrisponding to the terrain type. For example, terain-2.ogg would be for towns. Until work is finished on terrain sounds music will be off by default.
 
 Connecting:
-To connect edit aa.tin and find the name and password variables at the bottom of the file. Change the text in the second set of braces in each variable to match your character's details. Load the file with tt++ aa.tin.
+To connect, edit aa.tin and find the name and password variables at the bottom of the file. Change the text in the second set of braces in each variable to match your character's details. Load the file with tt++ aa.tin.
 #variable {password} {password}
 
 Requirements:
@@ -22,13 +22,13 @@ ogg123 part of vorbis-tools
 shuf usually included in most distros
 
 Skills and Spells:
-Some skills and spells can automatically be used while you are playing. OTo make sure everything is set up type load. You may also want to type load when you first practice a new skill or spell. An example of autousage is clay man for necromancers. To turn on automatica recast when your clay man dies type autoclay and to turn it back off type noautoclay.
+Some skills and spells can automatically be used while you are playing. To make sure everything is set up, type load. You may also want to type load when you first practice a new skill or spell. An example of autousage is clay man for necromancers. To turn on automatic recast when your clay man dies type autoclay and to turn it back off type noautoclay.
 
 Twitter:
-You can have achievements like backstabs, levels, and achievements posted to Twitter. If you have the CLI Twitter client TTYtter installed and configured correctly type twitter and events will be posted. To turn it off type notwitter.
+You can have achievements like backstabs, levels, and achievements posted to Twitter. If you have the CLI Twitter client TTYtter installed and configured correctly, type twitter and events will be posted. To turn it off type notwitter.
 
 Commands:
-In most cases for longer words you can type part of the command. the exception to this is auto stuff like autocflay, autobone, autofiend, autostore, etc You will have to experiment because the  commands start where mud commends end. For example, if you type fire you will connect to the fire channel. If, however, you type fireb all the way through fireball you will cast the spell fireball if you have it.
+In most cases, for longer words, you can type part of the command. The exception to this is auto stuff like autoclay, autobone, autofiend, autostore, etc - You will have to experiment because the  commands start where mud commands end. For example, if you type fire, you will connect to the fire channel. If, however, you type fireb all the way through fireball, you will cast the spell fireball if you have it.
 alt+1 through alt+0 play last 1 through tenth message.
 alt+w makes a wood woad if you have the spell and woad material is in your container.
 alt+b makes a bone guardian if the requirements are met.
@@ -43,15 +43,15 @@ alt+m southwest
 alt_. southeast
 autoclay cast clay man automatically if your current clay man dies
 autobonearmor recast bone armor when it drops. Will automatically soulbind the armor if you have the skill and a blue soulstone. use noautobonearmor to turn it off.
-autowoad automatically try to create a new wood woad of the current woad dies.
-(NOTES: turn off the autocast with noautoclay or noautowoad. These should not be used together and turningon one should disable the other.
+autowoad automatically try to create a new wood woad if the current woad dies.
+(NOTES: turn off the autocast with noautoclay or noautowoad. These should not be used together and turning on one should disable the other.
 the variable woadMaterial should be set to the material you want to use to create the woad. The material for creating the woad should be located in your container. The container variable needs to be set for this to work as well. Anytime you put something somewhere the destination is set as your container. So, put gondola sack will set your container as sack)
 autobone tries to make a bone guardian automatically. You need container set and some deanimated bones in your container for this to work. Of course the container variable has to be set.
 autometal Makes a metal construct, same requirements aas bone guardian and wood woad except the material has to be metal.
 autofiend Automatically make a new shadow fiend if the current one leaves or dies. You need soulstones of pale bluee or deep blue in your container for this to work.
-autoheal automatically someone if you hp them and they have less than a third of their hitpoints
+autoheal automatically heal someone if you hp them and they have less than a third of their hitpoints
 noautoheal turn off autohealing this is default
-autorecall automatically recalls you if you drop to prety hurt or awful condition.
+autorecall automatically recalls you if you drop to pretty hurt or awful condition.
 noautorecall turns off autorecall. this is default.
 autorefresh will refresh you automatically if your mv is below a fifth. Requires ctrigger to be set to on. This is the default now.
 noautorefresh turns off autorefresh.
@@ -61,7 +61,7 @@ bless cast bless n yourself
 bless target cast bless on someone else
 bm or bloodmist cast bloodmist
 bm or bloodmist target cast bloodmist on target
-brag cap or brag gt cap will brag your experience cap. this is not availalbe in normatl brag commands.
+brag cap or brag gt cap will brag your experience cap. this is not available in normal brag commands.
 combatsound turn on combat sound like slashes, punches, kicks, etc. This is default.
 nocombatsound turns off combat sound.
 fireball and fb cast fireball
@@ -76,24 +76,25 @@ icebolt and ib cast icebolt
 icebolt and ib target cast icebolt on a specific target
 id object cast identify on the specified object
 lb or lightning cast lightning bolt
-lb or lightning target cast lightning bolton specified target
+lb or lightning target cast lightning bolt on specified target
 clb or clightning channel cast lightning bolt
-clb or clightning target channel cast lightning bolton specified target
-speech Uses speech dispatcher to read tells and some other types of communication like clantell. You can change the rate with the speechrat command as in speechrate 80. Anything from -100 to 100 will work.
-nospeech turns off speech-dispatcher for tells, this is default.twitter post achievements and deaths to Twitter requires the program TTYtter to be installed and properly configured: http://www.floodgap.com/software/ttytter/
+clb or clightning target channel cast lightning bolt on specified target
+speech Uses speech-dispatcher to read tells and some other types of communication like clantell. You can change the rate with the speechrate command as in speechrate 80. Anything from -100 to 100 will work.
+nospeech turns off speech-dispatcher for tells, this is default.
+twitter post achievements and deaths to Twitter requires the program TTYtter to be installed and properly configured: http://www.floodgap.com/software/ttytter
 notwitter turn Twitter posts off
-To sac a corpse type x and press enter. You will use any skills you have like corpsecutter aand/or bloodsacrifice.
+To sac a corpse type x and press enter. You will use any skills you have like corpsecutter and/or bloodsacrifice.
 If you have the kick skill k will be aliased to kick.
 b is currently set to backstab. before using it you should set your stab weapon with the swield alias.
 swield set your backstab weapon. e.g. swield dagger
 load will show all your skills and spells and set the variables necessary for their automatic use.
 scan direction scans in a specific direction where direction is up, down, north, east, west, south. When scanning north or south the subdirections like northeast or southwest wil be included for that direction.
 t will throw a weapon.
-Some of thee will work  even if you don't have the skill, this will change as work progresses.
+Some of these will work  even if you don't have the skill, this will change as work progresses.
 autostore put certain items in your container. For now just soulstones.
-noautostore turning autostorage off.
+noautostore turn autostorage off.
 You will not autostore yellow and red soulstones. If you are botting you will drop and sac yellow and red soulstones because they are the lowest worth.
-F If you have the skill shadow fiend you will try to stop battling long enough to get a pale blue souldstone from your container and summon a shadow fiend.
+If you have the skill shadow fiend, you will try to stop battling long enough to get a pale blue souldstone from your container and summon a shadow fiend.
 
 Botting:
 To start botting type bot. To turn it off type nobot. To move while botting type automove, to stop moving type noautomove. If you have the taunt skill you will use it each time you enter a new room. Botting will try and autouse the best heal spell you have. Botting will try to not get you killed and try to recall you out if things get too bad. You can, of course, still die while botting.
@@ -106,6 +107,7 @@ buildwoads 20
 will make 20 wood woads, deanimate them, and store them in your container. Each woad currently costs 12 gold. It is best to do this while afk, because there is a 30 second regen time between each woad. You will get a message when the process starts and completes.
 
 Contributing
-If you make triggers or edit the aa.tin file in any way please load it with tintin++ and save it with #write it aa.tin before committing it so that everything will be in the standard tintin++ format. Please test your code before submitting.
+If you make triggers or edit the aa.tin file in any way, please load it with tintin++ and save it with #write
+If you make triggers or edit the aa.tin file in any way, please load it with tintin++ and save it with #write aa.tin before committing it so that everything will be in the standard tintin++ format. Please test your code before submitting.
 
 
